@@ -1,6 +1,6 @@
 /*
  * JasperReports - Free Java Reporting Library.
- * Copyright (C) 2001 - 2018 TIBCO Software Inc. All rights reserved.
+ * Copyright (C) 2001 - 2019 TIBCO Software Inc. All rights reserved.
  * http://www.jaspersoft.com
  *
  * Unless you have purchased a commercial license agreement from Jaspersoft,
@@ -23,8 +23,10 @@
  */
 package net.sf.jasperreports.crosstabs.fill;
 
+import java.lang.reflect.InvocationTargetException;
 import java.math.BigDecimal;
 import java.math.BigInteger;
+import java.math.RoundingMode;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -107,18 +109,11 @@ public final class JRPercentageCalculatorFactory
 			{
 				try
 				{
-					calculator = (JRPercentageCalculator) percentageCalculatorClass.newInstance();
+					calculator = (JRPercentageCalculator) percentageCalculatorClass.getDeclaredConstructor().newInstance();
 					cachedCalculators.put(percentageCalculatorClass.getName(), calculator);
 				}
-				catch (InstantiationException e)
-				{
-					throw 
-						new JRRuntimeException(
-							EXCEPTION_MESSAGE_KEY_PERCENTAGE_CALCULATOR_INSTANCE_ERROR,
-							new Object[]{percentageCalculatorClass},
-							e);
-				}
-				catch (IllegalAccessException e)
+				catch (InstantiationException | IllegalAccessException 
+					| NoSuchMethodException | InvocationTargetException e)
 				{
 					throw 
 						new JRRuntimeException(
@@ -144,12 +139,12 @@ public final class JRPercentageCalculatorFactory
 			Byte totalVal = (Byte) total.getValue();
 			Byte val = (Byte) value.getValue();
 			byte percentage = 0;
-			if (totalVal != null && totalVal.byteValue() != 0)
+			if (totalVal != null && totalVal != 0)
 			{
-				percentage = (byte) (100 * val.byteValue() / totalVal.byteValue());
+				percentage = (byte) (100 * val / totalVal);
 			}
 
-			return new Byte(percentage);
+			return percentage;
 		}
 	}
 
@@ -165,12 +160,12 @@ public final class JRPercentageCalculatorFactory
 			Short totalVal = (Short) total.getValue();
 			Short val = (Short) value.getValue();
 			short percentage = 0;
-			if (totalVal != null && totalVal.shortValue() != 0)
+			if (totalVal != null && totalVal != 0)
 			{
-				percentage = (short) (100 * val.shortValue() / totalVal.shortValue());
+				percentage = (short) (100 * val / totalVal);
 			}
 
-			return new Short(percentage);
+			return percentage;
 		}
 	}
 
@@ -186,12 +181,12 @@ public final class JRPercentageCalculatorFactory
 			Integer totalVal = (Integer) total.getValue();
 			Integer val = (Integer) value.getValue();
 			int percentage = 0;
-			if (totalVal != null && totalVal.intValue() != 0)
+			if (totalVal != null && totalVal != 0)
 			{
-				percentage = 100 * val.intValue() / totalVal.intValue();
+				percentage = 100 * val / totalVal;
 			}
 
-			return Integer.valueOf(percentage);
+			return percentage;
 		}
 	}
 
@@ -207,12 +202,12 @@ public final class JRPercentageCalculatorFactory
 			Long totalVal = (Long) total.getValue();
 			Long val = (Long) value.getValue();
 			long percentage = 0L;
-			if (totalVal != null && totalVal.longValue() != 0)
+			if (totalVal != null && totalVal != 0)
 			{
-				percentage = 100L * val.longValue() / totalVal.longValue();
+				percentage = 100L * val / totalVal;
 			}
 
-			return new Long(percentage);
+			return percentage;
 		}
 	}
 
@@ -228,12 +223,12 @@ public final class JRPercentageCalculatorFactory
 			Float totalVal = (Float) total.getValue();
 			Float val = (Float) value.getValue();
 			float percentage = 0f;
-			if (totalVal != null && totalVal.floatValue() != 0)
+			if (totalVal != null && totalVal != 0)
 			{
-				percentage = 100f * val.floatValue() / totalVal.floatValue();
+				percentage = 100f * val / totalVal;
 			}
 
-			return new Float(percentage);
+			return percentage;
 		}
 	}
 
@@ -248,12 +243,12 @@ public final class JRPercentageCalculatorFactory
 			Double totalVal = (Double) total.getValue();
 			Double val = (Double) value.getValue();
 			double percentage = 0d;
-			if (totalVal != null && totalVal.doubleValue() != 0)
+			if (totalVal != null && totalVal != 0)
 			{
-				percentage = 100d * val.doubleValue() / totalVal.doubleValue();
+				percentage = 100d * val / totalVal;
 			}
 
-			return new Double(percentage);
+			return percentage;
 		}
 	}
 
@@ -271,7 +266,7 @@ public final class JRPercentageCalculatorFactory
 			BigDecimal percentage;
 			if (totalVal != null && totalVal.doubleValue() != 0)
 			{
-				percentage = val.multiply(BigDecimal.valueOf(100L)).divide(totalVal, BigDecimal.ROUND_HALF_UP);
+				percentage = val.multiply(BigDecimal.valueOf(100L)).divide(totalVal, RoundingMode.HALF_UP);
 			}
 			else
 			{
