@@ -1,6 +1,6 @@
 /*
  * JasperReports - Free Java Reporting Library.
- * Copyright (C) 2001 - 2018 TIBCO Software Inc. All rights reserved.
+ * Copyright (C) 2001 - 2019 TIBCO Software Inc. All rights reserved.
  * http://www.jaspersoft.com
  *
  * Unless you have purchased a commercial license agreement from Jaspersoft,
@@ -29,12 +29,15 @@
 package net.sf.jasperreports.engine.design;
 
 import java.io.Serializable;
+import java.lang.reflect.InvocationTargetException;
 import java.util.Map;
 
-import org.apache.commons.collections.map.ReferenceMap;
+import org.apache.commons.collections4.map.ReferenceMap;
 
 import net.sf.jasperreports.annotations.properties.Property;
 import net.sf.jasperreports.annotations.properties.PropertyScope;
+import net.sf.jasperreports.compilers.DirectExpressionValueFilter;
+import net.sf.jasperreports.compilers.JavaDirectExpressionValueFilter;
 import net.sf.jasperreports.engine.JRException;
 import net.sf.jasperreports.engine.JRPropertiesUtil;
 import net.sf.jasperreports.engine.JasperReportsContext;
@@ -80,8 +83,10 @@ public abstract class JRAbstractJavaCompiler extends JRAbstractCompiler
 
 
 	private static final Object CLASS_CACHE_NULL_KEY = new Object();
-	private static Map<Object,Map<String,Class<?>>> classCache = new ReferenceMap(ReferenceMap.WEAK, ReferenceMap.SOFT);
-
+	private static Map<Object,Map<String,Class<?>>> classCache = 
+		new ReferenceMap<Object,Map<String,Class<?>>>(
+			ReferenceMap.ReferenceStrength.WEAK, ReferenceMap.ReferenceStrength.SOFT
+			);
 	
 	/**
 	 * 
@@ -91,6 +96,11 @@ public abstract class JRAbstractJavaCompiler extends JRAbstractCompiler
 		super(jasperReportsContext, needsSourceFiles);
 	}
 
+	@Override
+	protected DirectExpressionValueFilter directValueFilter()
+	{
+		return JavaDirectExpressionValueFilter.instance();
+	}
 
 	@Override
 	protected JREvaluator loadEvaluator(Serializable compileData, String className) throws JRException
@@ -102,7 +112,7 @@ public abstract class JRAbstractJavaCompiler extends JRAbstractCompiler
 			Class<?> clazz = getClassFromCache(className);
 			if (clazz == null)
 			{
-				clazz = JRClassLoader.loadClassFromBytes(className, (byte[]) compileData);
+				clazz = loadClass(className, (byte[]) compileData);
 				putClassInCache(className, clazz);
 			}
 			
@@ -112,9 +122,9 @@ public abstract class JRAbstractJavaCompiler extends JRAbstractCompiler
 				classFromBytesRef.set(clazz);
 			}
 		
-			evaluator = (JREvaluator) clazz.newInstance();
+			evaluator = (JREvaluator) clazz.getDeclaredConstructor().newInstance();
 		}
-		catch (Exception e)
+		catch (NoSuchMethodException | InvocationTargetException | IllegalAccessException | InstantiationException e)
 		{
 			throw 
 			new JRException(
@@ -124,6 +134,12 @@ public abstract class JRAbstractJavaCompiler extends JRAbstractCompiler
 		}
 		
 		return evaluator;
+	}
+
+
+	protected Class<?> loadClass(String className, byte[] compileData)
+	{
+		return JRClassLoader.loadClassFromBytes(reportClassFilter, className, compileData);
 	}
 	
 	
@@ -153,7 +169,7 @@ public abstract class JRAbstractJavaCompiler extends JRAbstractCompiler
 		Map<String,Class<?>> contextMap = classCache.get(key);
 		if (contextMap == null)
 		{
-			contextMap = new ReferenceMap(ReferenceMap.HARD, ReferenceMap.SOFT);
+			contextMap = new ReferenceMap<String,Class<?>>(ReferenceMap.ReferenceStrength.HARD, ReferenceMap.ReferenceStrength.SOFT);
 			classCache.put(key, contextMap);
 		}
 		contextMap.put(className, loadedClass);
