@@ -1,6 +1,6 @@
 /*
  * JasperReports - Free Java Reporting Library.
- * Copyright (C) 2001 - 2018 TIBCO Software Inc. All rights reserved.
+ * Copyright (C) 2001 - 2019 TIBCO Software Inc. All rights reserved.
  * http://www.jaspersoft.com
  *
  * Unless you have purchased a commercial license agreement from Jaspersoft,
@@ -22,6 +22,8 @@
  * along with JasperReports. If not, see <http://www.gnu.org/licenses/>.
  */
 package net.sf.jasperreports.engine.export;
+
+import java.lang.reflect.InvocationTargetException;
 
 import net.sf.jasperreports.engine.JRException;
 import net.sf.jasperreports.engine.util.JRClassLoader;
@@ -51,7 +53,7 @@ public final class ExporterFilterFactoryUtil
 		try
 		{
 			Class<?> clazz = JRClassLoader.loadClassForName(factoryClassName);
-			return (ExporterFilterFactory)clazz.newInstance();
+			return (ExporterFilterFactory)clazz.getDeclaredConstructor().newInstance();
 		}
 		catch (ClassNotFoundException e)
 		{
@@ -61,15 +63,8 @@ public final class ExporterFilterFactoryUtil
 					new Object[]{factoryClassName}, 
 					e);
 		}
-		catch (InstantiationException e)
-		{
-			throw 
-				new JRException(
-					EXCEPTION_MESSAGE_KEY_FACTORY_CLASS_INSTANCE_FAILURE,
-					new Object[]{factoryClassName}, 
-					e);
-		}
-		catch (IllegalAccessException e)
+		catch (InstantiationException | IllegalAccessException 
+			| NoSuchMethodException | InvocationTargetException e)
 		{
 			throw 
 				new JRException(
