@@ -1,6 +1,6 @@
 /*
  * JasperReports - Free Java Reporting Library.
- * Copyright (C) 2001 - 2018 TIBCO Software Inc. All rights reserved.
+ * Copyright (C) 2001 - 2019 TIBCO Software Inc. All rights reserved.
  * http://www.jaspersoft.com
  *
  * Unless you have purchased a commercial license agreement from Jaspersoft,
@@ -23,11 +23,12 @@
  */
 package net.sf.jasperreports.engine.fill;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Map;
 
-import net.sf.jasperreports.engine.JRRuntimeException;
+import org.apache.commons.collections4.map.ReferenceMap;
 
-import org.apache.commons.collections.map.ReferenceMap;
+import net.sf.jasperreports.engine.JRRuntimeException;
 
 
 /**
@@ -41,7 +42,9 @@ public final class JRIncrementerFactoryCache
 	 *
 	 */
 	private static Map<Class<?>,JRIncrementerFactory> factoriesMap = 
-		new ReferenceMap(ReferenceMap.WEAK, ReferenceMap.HARD);
+		new ReferenceMap<Class<?>,JRIncrementerFactory>(
+			ReferenceMap.ReferenceStrength.WEAK, ReferenceMap.ReferenceStrength.HARD
+			);
 
 
 	/**
@@ -55,13 +58,10 @@ public final class JRIncrementerFactoryCache
 		{
 			try
 			{
-				incrementerFactory = (JRIncrementerFactory)factoryClass.newInstance();
+				incrementerFactory = (JRIncrementerFactory)factoryClass.getDeclaredConstructor().newInstance();
 			}
-			catch (InstantiationException e)
-			{
-				throw new JRRuntimeException(e);
-			}
-			catch (IllegalAccessException e)
+			catch (InstantiationException | IllegalAccessException 
+				| NoSuchMethodException | InvocationTargetException e)
 			{
 				throw new JRRuntimeException(e);
 			}
